Fixed some pre-commit errors and changed template settings

--- a/aiida_spirit/data/input_original.cfg
+++ b/aiida_spirit/data/input_original.cfg
@@ -5,11 +5,11 @@
 ### Output Folders
 output_file_tag    <time>
 log_output_folder  .
-llg_output_folder  output
-mc_output_folder   output
-gneb_output_folder output
-mmf_output_folder  output
-ema_output_folder  output
+llg_output_folder  .
+mc_output_folder   .
+gneb_output_folder .
+mmf_output_folder  .
+ema_output_folder  .
 
 ### Save input parameters on State creation/deletion
 save_input_initial  0
@@ -32,10 +32,10 @@ save_neighbours_final   0
 hamiltonian                heisenberg_pairs
 
 ### Boundary_conditions (a b c): 0(open), 1(periodical)
-boundary_conditions        1 1 0
+boundary_conditions        1 1 1
 
 ### External magnetic field vector[T]
-external_field_magnitude   25.0
+external_field_magnitude   0.0
 external_field_normal      0.0 0.0 1.0
 ### µSpin
 mu_s                       2.0
@@ -73,7 +73,7 @@ bravais_lattice sc
 
 ### Number of basis cells along principal
 ### directions (a b c)
-n_basis_cells 100 100 1
+n_basis_cells 5 5 5
 ################# End Geometry ###################
 
 
@@ -147,7 +147,7 @@ llg_max_walltime        0:0:0
 llg_seed                20006
 
 ### Number of iterations
-llg_n_iterations        2000000
+llg_n_iterations        200000
 ### Number of iterations after which to save
 llg_n_iterations_log    2000
 
@@ -177,10 +177,10 @@ llg_stt_magnitude           0.0
 llg_stt_polarisation_normal 1.0 0.0 0.0
 
 ### Force convergence parameter
-llg_force_convergence   10e-9
+llg_force_convergence   10e-7
 
 ### Output configuration
-llg_output_any     1
+llg_output_any     0
 llg_output_initial 1
 llg_output_final   1
 
@@ -188,10 +188,10 @@ llg_output_energy_step                  0
 llg_output_energy_archive               1
 llg_output_energy_spin_resolved         0
 llg_output_energy_divide_by_nspins      1
-llg_output_energy_add_readability_lines 1
+llg_output_energy_add_readability_lines 0
 
 llg_output_configuration_step     1
-llg_output_configuration_archive  0
+llg_output_configuration_archive  1
 llg_output_configuration_filetype 3
 ############## End LLG Parameters ################
 
