Add output files to retrieved and add more tests

--- a/aiida_spirit/data/input_original.cfg
+++ b/aiida_spirit/data/input_original.cfg
@@ -3,7 +3,7 @@
 
 
 ### Output Folders
-output_file_tag    <time>
+output_file_tag    spirit
 log_output_folder  .
 llg_output_folder  .
 mc_output_folder   .
@@ -180,7 +180,7 @@ llg_stt_polarisation_normal 1.0 0.0 0.0
 llg_force_convergence   10e-7
 
 ### Output configuration
-llg_output_any     0
+llg_output_any     1
 llg_output_initial 1
 llg_output_final   1
 
@@ -191,7 +191,7 @@ llg_output_energy_divide_by_nspins      1
 llg_output_energy_add_readability_lines 0
 
 llg_output_configuration_step     1
-llg_output_configuration_archive  1
+llg_output_configuration_archive  0
 llg_output_configuration_filetype 3
 ############## End LLG Parameters ################
 
