--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,29 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.8]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        aiida: [{version: 'aiida-core==1.6.8', name: '1.6.8'}, {version: 'aiida-core==2.0.1', name: '2.0.1'}]
+        masci-tools: [{version: 'masci-tools', name: ''}]
+        allowed-to-fail: [false]
         backend: ['django']
+        include:
+          # for python 3.9 we also test with the latest aiida-core version and the latest version of masci-tools
+          - python-version: 3.9
+            aiida: {version: 'git+https://github.com/aiidateam/aiida-core.git@main', name: 'latest'}
+            masci-tools: {version: 'git+https://github.com/JuDFTteam/masci-tools.git@develop', name: '-masci-develop'}
+            allowed-to-fail: true
+          - python-version: 3.9
+            aiida: {version: 'aiida-core==1.6.8', name: '1.6.8'}
+            masci-tools: {version: 'git+https://github.com/JuDFTteam/masci-tools.git@develop', name: '-masci-develop'}
+            allowed-to-fail: true
+        exclude:
+          # aiida-core>=2.0 needs at least python 3.8
+          - python-version: 3.7
+            aiida: {version: 'aiida-core==2.0.1', name: '2.0.1'}
+            masci-tools: {version: 'masci-tools', name: ''}
+            allowed-to-fail: false
 
     services:
       postgres:
@@ -42,8 +62,12 @@ jobs:
     - name: Install python dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[testing]
-        reentry scan -r aiida
+        pip install ${{ matrix.aiida.version }}
+        pip install ${{ matrix.masci-tools.version }}
+        pip install .[testing]
+        pip install reentry
+        reentry scan
+        pip freeze
 
     - name: Run test suite
       env:
